<resources>
    <string name="app_name">Steganography</string>
    <string name="takepic">Take a picture or pick from gallery.</string>
    <string name="titleapp"><![CDATA[>./Steganography]]></string>
    <string name="desc_apptitle">Hide text into images.</string>
    <string name="ready_enc">Ready for encoding.</string>
    <string name="clear_button">Clear</string>
    <string name="encode_button">Encode</string>
    <string name="save_txt">Save .txt</string>
    <string name="try_another_image">Try another image</string>
</resources>
